# PayEra

./: .dockerignore  .gitignore  .prettierignore  Cargo.toml  Dockerfile  FRONTEND_AUDIT_REPORT.md  README.md  eslint.config.mjs  package-lock.json  package.json  test-arg.Dockerfile  test-auth.ts  tsconfig.json  turbo.json
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
apps/admin/: next.config.ts  package.json
apps/api/: .env.example  Dockerfile  check-sdk.js  eslint.config.mjs  package.json  test-all-verify.js  test-cache.js  test-freighter.js  test-stellar.js  test-verify.js  tsconfig.json
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json
contracts/merchant-registry/: Cargo.toml
contracts/payment-engine/: Cargo.toml
contracts/payment-engine/src/: lib 2.rs  lib.rs
contracts/reward-engine/: Cargo.toml
contracts/star-token/: Cargo.toml
docs/: CONTRACT_VERIFICATION_REPORT.md
docs/contracts/: soroban-architecture.md
docs/database/: postgresql-architecture.md
docs/design/: mobile-ui-blueprint.md
docs/knowledge-base/: 00-executive-summary.md  01-system-architecture.md  02-branch-reconciliation.md  03-backend-service-map.md  04-frontend-map.md  05-contracts.md  06-integrations.md  07-security.md  08-status-limitations-tech-debt.md  09-api-and-database.md  10-master-context.md  11-feature-integration-audit.md  README.md
stitch_payera_mobile_ui_design/dashboard/: code.html
stitch_payera_mobile_ui_design/ekeza/: DESIGN.md
stitch_payera_mobile_ui_design/kyc_pending/: code.html
tools/eslint-config/: base.mjs  (+3 more)
(+204 files in other folders)
