[package]
name = "payment-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
merchant-registry = { path = "../merchant-registry" }
reward-engine = { path = "../reward-engine" }
soroban-sdk = { workspace = true, features = ["testutils"] }
star-token = { path = "../star-token" }
